--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>
+
   <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -30,7 +32,11 @@
 
     
 	<br><br>
+
+  <button onclick="play();" class="btn btn-success play_button">play</button> 
+
 </center>
+
 
 <script src="main.js"></script>
 </body>
